<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello rooster-android-app!</string>
    <string name="app_name">Rooster</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="time">Time</string>
    <string name="time0from">7:30</string>
    <string name="time0to">9:10</string>
    <string name="time1from">9:30</string>
    <string name="time1to">11:10</string>
    <string name="time2from">11:30</string>
    <string name="time2to">13:10</string>
    <string name="time3from">13:30</string>
    <string name="time3to">15:10</string>
    <string name="time4from">15:30</string>
    <string name="time4to">17:10</string>
    <string name="time5from">17:30</string>
    <string name="time5to">19:10</string>
    <string name="time6from">19:30</string>
    <string name="time6to">21:10</string>
    <string name="subject">Subject</string>
    <string name="test_subject">Test\n\nSubject</string>
    <string name="subject_details">Subject details</string>
    <string name="name">Name</string>
    <string name="classroom">Classroom</string>
    <string name="teacher">Teacher</string>
    <string name="color">Color</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="spinnerPrompt">Choose color..</string>
    <string name="color_blue">blue</string>
    <string name="color_red">red</string>
    <string name="red">red</string>
    
    <string-array name="colors">
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Black</item>
    </string-array>
        <string name="notification_checkbox">Add notification</string>
</resources>
