<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
             xmlns:my="http://schemas.android.com/apk/res-auto"
    a:layout_width="match_parent"
    a:layout_height="match_parent" >
<TableLayout
        a:layout_width="match_parent"
        a:layout_height="match_parent"
        a:layout_margin="3dp"
        a:orientation="vertical">
    <TableRow
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:layout_weight="0" >

        <com.itborci.gui.DayView a:layout_weight="0" my:name="@string/time" />
        <com.itborci.gui.DayView a:layout_weight="1" my:name="@string/monday" />
        <com.itborci.gui.DayView a:layout_weight="1" my:name="@string/tuesday" />
        <com.itborci.gui.DayView a:layout_weight="1" my:name="@string/wednesday" />
        <com.itborci.gui.DayView a:layout_weight="1" my:name="@string/thursday" />
        <com.itborci.gui.DayView a:layout_weight="1" my:name="@string/friday" />
    </TableRow>

    <TableRow
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:layout_weight="1" >

        <com.itborci.gui.TimeView a:layout_weight="0" my:from="@string/time0from" my:to="@string/time0to" />

        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="0" my:day="0"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="0" my:day="1"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="0" my:day="2"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="0" my:day="3"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="0" my:day="4"/>
    </TableRow>

    <TableRow
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_weight="1" >

        <com.itborci.gui.TimeView a:layout_weight="0" my:from="@string/time1from" my:to="@string/time1to"/>

        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="1" my:day="0"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="1" my:day="1"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="1" my:day="2"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="1" my:day="3"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="1" my:day="4"/>
    </TableRow>
    <TableRow
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_weight="1" >

        <com.itborci.gui.TimeView a:layout_weight="0" my:from="@string/time2from" my:to="@string/time2to"/>

        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="2" my:day="0"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="2" my:day="1"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="2" my:day="2"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="2" my:day="3"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="2" my:day="4"/>
    </TableRow>
    <TableRow
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_weight="1" >

        <com.itborci.gui.TimeView a:layout_weight="0" my:from="@string/time3from" my:to="@string/time3to"/>

        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="3" my:day="0"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="3" my:day="1"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="3" my:day="2"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="3" my:day="3"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="3" my:day="4"/>
    </TableRow>
    <TableRow
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_weight="1" >

        <com.itborci.gui.TimeView a:layout_weight="0" my:from="@string/time4from" my:to="@string/time4to"/>

        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="4" my:day="0"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="4" my:day="1"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="4" my:day="2"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="4" my:day="3"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="4" my:day="4"/>
    </TableRow>
    <TableRow
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_weight="1" >

        <com.itborci.gui.TimeView a:layout_weight="0" my:from="@string/time5from" my:to="@string/time5to"/>

        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="5" my:day="0"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="5" my:day="1"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="5" my:day="2"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="5" my:day="3"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="5" my:day="4"/>
    </TableRow>
    <TableRow
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_weight="1" >

        <com.itborci.gui.TimeView a:layout_weight="0" my:from="@string/time6from" my:to="@string/time6to"/>

        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="6" my:day="0"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="6" my:day="1"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="6" my:day="2"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="6" my:day="3"/>
        <com.itborci.gui.SubjectView a:layout_weight="1" my:hour="6" my:day="4"/>
    </TableRow>
</TableLayout>
</LinearLayout>
